{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 85,
  "lineage": "5beb5e1b-6069-c367-71c4-59e050c76aba",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f464622840cae619",
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:elastic-ip/eipalloc-0f464622840cae619",
            "domain": "vpc",
            "id": "eipalloc-0f464622840cae619",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-153-153.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.153.153",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab02-eip-natgw-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-eip-natgw-main",
              "Organization": "tf-core",
              "Project": "lab02"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:internet-gateway/igw-016d5557ecd4ae911",
            "id": "igw-016d5557ecd4ae911",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab02-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-igw",
              "Organization": "tf-core",
              "Project": "lab02"
            },
            "vpc_id": "vpc-0c1f5430efd47cc22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f464622840cae619",
            "association_id": "eipassoc-08ad3031e44772090",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-05c8853050523199c",
            "network_interface_id": "eni-0013850831bda984a",
            "private_ip": "10.0.1.82",
            "public_ip": "43.202.153.153",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f245734e4109787e",
            "tags": {
              "Name": "tf-core-lab02-natgw-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-natgw-main",
              "Organization": "tf-core",
              "Project": "lab02"
            },
            "vpc_id": "vpc-0c1f5430efd47cc22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-05b748560e5203749",
            "id": "rtb-05b748560e5203749",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c8853050523199c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab02-rtb-private-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-rtb-private-a",
              "Organization": "tf-core",
              "Project": "lab02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1f5430efd47cc22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-05b748560e5203749",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-0bab377bd2012485f",
            "id": "rtb-0bab377bd2012485f",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c8853050523199c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab02-rtb-private-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-rtb-private-b",
              "Organization": "tf-core",
              "Project": "lab02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1f5430efd47cc22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-0bab377bd2012485f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-0caf160e137e307ce",
            "id": "rtb-0caf160e137e307ce",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016d5557ecd4ae911",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab02-rtb-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-rtb-public-a",
              "Organization": "tf-core",
              "Project": "lab02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1f5430efd47cc22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-0caf160e137e307ce",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-089a1ed0857a5546d",
            "id": "rtb-089a1ed0857a5546d",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016d5557ecd4ae911",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab02-rtb-public-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-rtb-public-b",
              "Organization": "tf-core",
              "Project": "lab02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1f5430efd47cc22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-089a1ed0857a5546d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a0938431f28966a",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-05b748560e5203749",
            "subnet_id": "subnet-08200bdba364b7963"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-09a0938431f28966a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_0",
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0226ec07219eb4c9e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0bab377bd2012485f",
            "subnet_id": "subnet-0149f79232ed448ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0226ec07219eb4c9e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_1",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e36ed4c424f07313",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0caf160e137e307ce",
            "subnet_id": "subnet-0f245734e4109787e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0e36ed4c424f07313",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public_0",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee2744cd8f496f1f",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-089a1ed0857a5546d",
            "subnet_id": "subnet-09a5bb981f00ecd4a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0ee2744cd8f496f1f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public_1",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-08200bdba364b7963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08200bdba364b7963",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab02-subnet-private-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-subnet-private-a",
              "Organization": "tf-core",
              "Project": "lab02"
            },
            "vpc_id": "vpc-0c1f5430efd47cc22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-08200bdba364b7963",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-0149f79232ed448ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0149f79232ed448ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab02-subnet-private-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-subnet-private-b",
              "Organization": "tf-core",
              "Project": "lab02"
            },
            "vpc_id": "vpc-0c1f5430efd47cc22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-0149f79232ed448ed",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-0f245734e4109787e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f245734e4109787e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab02-subnet-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-subnet-public-a",
              "Organization": "tf-core",
              "Project": "lab02"
            },
            "vpc_id": "vpc-0c1f5430efd47cc22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-0f245734e4109787e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-09a5bb981f00ecd4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a5bb981f00ecd4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab02-subnet-public-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-subnet-public-b",
              "Organization": "tf-core",
              "Project": "lab02"
            },
            "vpc_id": "vpc-0c1f5430efd47cc22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-09a5bb981f00ecd4a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:vpc/vpc-0c1f5430efd47cc22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d515e204bdef08ff",
            "default_route_table_id": "rtb-09e1aa6ed464a4e43",
            "default_security_group_id": "sg-01f3c59b1bc82389d",
            "dhcp_options_id": "dopt-018f05c8d8ab5dc53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1f5430efd47cc22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e1aa6ed464a4e43",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab02-vpc-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab02-vpc-main",
              "Organization": "tf-core",
              "Project": "lab02"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "vpc-0c1f5430efd47cc22",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}